== 0.3.6 ?

* Fixing backgroundjob to use --daemon
* Fixing merb init to use daemon init function on start (then it plays nice with monit)
* Fixing backgroundjob init (BIN_PATH error)
* Adding --log to backgroundjob init.d

== 0.3.5 2008-05-08

* Adding merb:migrate recipe
* Fixing merb monitrc
* Added preview variables prompt
* Fixed merb logrotate defaults

== 0.3.4 2008-05-05

* Removed upload plugin (obsolete)
* Fixing nginx host recipe

== 0.3.3 2008-04-29

* Adding merb init script (for Centos)
* Adding merb monit confs
* Adding merb logrotate
* Created generic nginx vhost template
* Deprecated rails:setup for active_record:setup (for merb setup)

== 0.3.2 2008-04-03

* Adding hostname helper (utils.hostname) 
* Adding sphinx_hostname var. Needed for delta conf.
* Updated example sphinx conf template

== 0.3.1 2008-04-02

* Fixing the init scripts to use killproc and have nice output (centos)
* Fixing sphinx initscript to clean on start (if process does not exist)
* Removing some roles options. Roles are confusing, I don't want to use them.

== 0.2.15 2008-03-31

* Adding backgroundjob recipes and templates.
* Fixed backgroundrb monit host port check (removed)

== 0.2.14 2008-03-27

* Removing my lame monkey patches
* Mysql cnf template
* Cleaning up mysql grant locations
* Logrotate for mysql slow query log

== 0.2.13 2008-03-26

* Fixing monit re/start for mongrel cluster and backgroundrb

== 0.2.12 2008-03-26

* Re-formatting some documentation, experimenting with getting source in the docs (FAIL!)
* Including backgroundrb logrotate, monit, restart

== 0.2.11 2008-03-25

* Backgroundrb recipes and templates
* Memcached yml template and recipe
* Rails update code task

== 0.2.9 <never>

* SSH keygen and authorize key recipes
* Updated rails:setup recipe to include option for specifying path to database yml template
* Logrotate recipes

* Plugin adds/changes:
** utils.install_template
** utils.append_to
** utils.egrep
** utils.exist?

== 0.2.8 2008-03-13
